# cknft

./: .gitignore  Cargo.toml  README.md  dfx.json  foundry.toml  package.json  predeploy.sh  remappings.txt
backend/cknft/: .gitmodules  _Cargo.toml
backend/cknft/ethereum/: remappings.txt
backend/cknft/ethereum/src/: CkIcp.sol
backend/ethereum/: CkIcp.sol  CkNFT.sol  CkTokenDeposit.sol  TransferHelper.sol
backend/icrc7/: Cargo.toml  icrc7.did
backend/icrc7/src/: crypto.rs  errors.rs  init_method.rs  lib.rs  state.rs  types.rs
backend/icrc7_tests/: Cargo.toml
backend/payment/: Cargo.toml  payment.did
backend/payment/src/: lib.rs  transaction.rs
script/: CkIcp.s.sol  CkNFT.s.sol
src/components/: Balance.tsx  Confirmation.tsx  Deposit.tsx  Item.tsx  Login.tsx  Popup.jsx  Receive.jsx  Shop.tsx  Transaction.tsx  VerifyTransaction.tsx  Wallet.tsx
src/declarations/factory/: factory.did.d.ts  factory.did.js  index.d.ts  index.js
src/declarations/icrc7/: icrc7.did.d.ts  icrc7.did.js  index.d.ts  index.js
src/declarations/payment/: payment.did.d.ts  payment.did.js
src/pages/: _app.tsx  index.tsx
src/service/: abi.json  config.ts  hello.ts  icrc7.ts
src/styles/: Home.module.css  Wallet.module.css
test/: CkNFT.t.sol
