[package]
name = "icrc7_tests"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
candid = "0.8.4"
ic-cdk = "0.9.2"
ic-representation-independent-hash = "0.3.0"
ic-test-state-machine-client = "2.2.1"
serde = "1.0.171"
serde_bytes = "0.11.11"
serde_cbor = "0.11.2"
sha2 = "0.10.7"